--- a/app/src/main/res/layout/activity_playlist_detail.xml
+++ b/app/src/main/res/layout/activity_playlist_detail.xml
@@ -46,6 +46,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="6dp"
+            android:gravity="center"
             android:text="TextView"
             android:textColor="@color/white"
             android:textSize="20sp"
@@ -54,6 +55,7 @@
         <TextView
             android:id="@+id/tv_your_name_detail"
             android:layout_width="match_parent"
+            android:gravity="center"
             android:layout_height="wrap_content"
             android:padding="6dp"
             android:text="TextView"
@@ -64,20 +66,23 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:gravity="center"
+            android:layout_marginTop="10dp">
 
             <ImageButton
                 android:id="@+id/image_btn_show_dialog"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
                 android:background="@color/black"
                 android:padding="10dp"
                 android:src="@drawable/baseline_more_horiz_24" />
 
             <ImageButton
                 android:id="@+id/imageButton3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:scaleType="centerCrop"
                 android:layout_marginLeft="280dp"
                 android:background="@color/black"
                 android:src="@drawable/play" />
@@ -85,15 +90,18 @@
         </LinearLayout>
 
         <LinearLayout
+            android:layout_marginTop="15dp"
             android:id="@+id/layout_add_song"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:layout_gravity="center"
+            android:layout_marginHorizontal="10dp">
 
             <ImageButton
                 android:id="@+id/img_btn_add_song_playlist"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
                 android:background="@color/black"
                 android:padding="8dp"
                 android:src="@drawable/baseline_add_24" />
@@ -102,14 +110,16 @@
                 android:id="@+id/textView12"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="14dp"
+                android:layout_marginLeft="5dp"
                 android:text="Thêm vào danh sách này"
+                android:layout_gravity="center"
                 android:textColor="@color/white"
                 android:textSize="18dp" />
         </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view_song_detail"
+            android:layout_marginTop="10dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
