--- a/app/src/main/res/layout/custom_song_playlist_item.xml
+++ b/app/src/main/res/layout/custom_song_playlist_item.xml
@@ -2,39 +2,46 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/black"
-    android:padding="16dp">
+    android:padding="8dp">
 
-    <ImageView
-        android:id="@+id/imageViewCover"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:layout_marginTop="8dp"
-        android:src="@drawable/placeholder_img" />
+    <androidx.cardview.widget.CardView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:cardCornerRadius="10dp">
+        <ImageView
+            android:id="@+id/imageViewCover"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/placeholder_img" />
+    </androidx.cardview.widget.CardView>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:gravity="center">
 
         <TextView
             android:id="@+id/textViewTitle"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/white"
             android:text="Title"
-            android:padding="8dp"
-            android:textSize="18sp"
+            android:layout_marginLeft="10dp"
+            android:textSize="14sp"
             android:textStyle="bold" />
 
         <TextView
             android:id="@+id/textViewArtist"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/white"
             android:text="Artist"
-            android:padding="8dp"
-            android:textSize="14sp" />
+            android:layout_marginTop="8dp"
+            android:layout_marginLeft="10dp"
+            android:textSize="12dp" />
     </LinearLayout>
 
 </LinearLayout>
