--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black"
+    android:id="@+id/relativeLayout"
     tools:context=".View.Login">
+
+    <!-- ViewPager to display dynamic background -->
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/viewPager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:visibility="visible" />
 
     <!-- Toolbar vẫn giữ nguyên như cũ -->
     <androidx.appcompat.widget.Toolbar
@@ -14,15 +23,6 @@
         android:layout_height="?attr/actionBarSize"
         android:gravity="top"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar">
-        <!-- TextView trong Toolbar -->
-        <TextView
-            android:id="@+id/titleTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Log in"
-            android:textColor="#FFFFFF"
-            android:textSize="20sp"
-            android:layout_gravity="center"/>
     </androidx.appcompat.widget.Toolbar>
 
     <!-- Sử dụng LinearLayout để đặt các thành phần còn lại ở giữa -->
@@ -35,84 +35,104 @@
         android:paddingStart="20dp"
         android:paddingEnd="20dp">
 
-        <!-- TextView cho Email or Phone Number -->
+        <!-- TextView trong Toolbar -->
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/titleTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="20dp"
-            android:text="Email or Phone number"
+            android:text="LOG IN"
+            android:textStyle="bold"
             android:textColor="#FFFFFF"
-            android:textSize="25sp"
-            android:textStyle="bold" />
+            android:textSize="30sp"
+            android:layout_gravity="center"/>
 
-        <!-- EditText cho Email or Phone Number -->
-        <EditText
-            android:id="@+id/edtEmailOrPhoneNum"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/emailInputLayout"
             android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:background="@drawable/edit_text_background"
-            android:ems="10"
-            android:importantForAutofill="no"
-            android:inputType="text"
-            android:maxLines="1"
-            android:paddingStart="20dp"
-            android:textColor="@color/white"
-            tools:ignore="HardcodedText" />
-
-        <!-- TextView cho Password -->
-        <TextView
-            android:id="@+id/textView3"
-            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="20dp"
-            android:text="Password"
-            android:textColor="#FFFFFF"
-            android:textSize="25sp"
-            android:textStyle="bold" />
+            android:layout_below="@id/frame1"
+            android:layout_marginTop="16dp"
+            app:boxCornerRadiusBottomEnd="16dp"
+            app:boxCornerRadiusBottomStart="16dp"
+            app:boxCornerRadiusTopEnd="16dp"
+            app:boxCornerRadiusTopStart="16dp"
+            android:textColorHint="#F00"
+            app:startIconDrawable="@drawable/baseline_email_24"
+            app:startIconContentDescription="Email">
 
-        <!-- EditText cho Password -->
-        <EditText
-            android:id="@+id/edtPass"
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/edtEmailOrPhoneNum"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="#FFFFFF"
+                android:textStyle="bold"
+                android:textSize="18sp"
+                android:inputType="textEmailAddress"
+                android:background="@drawable/button_background_2"
+                android:padding="8dp"
+                android:drawablePadding="8dp"
+                android:hint="Email" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/passwordLayout"
             android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:autofillHints="no"
-            android:background="@drawable/edit_text_background"
-            android:ems="10"
-            android:inputType="textPassword"
-            android:paddingStart="20dp"
-            android:textColor="@color/white"
-            tools:ignore="HardcodedText" />
+            android:layout_height="wrap_content"
+            android:layout_below="@id/emailInputLayout"
+            android:layout_marginTop="16dp"
+            app:boxCornerRadiusBottomEnd="16dp"
+            app:boxCornerRadiusBottomStart="16dp"
+            app:boxCornerRadiusTopEnd="16dp"
+            app:boxCornerRadiusTopStart="16dp"
+            android:textColorHint="#F00"
+            app:startIconDrawable="@drawable/baseline_password_24"
+            app:startIconContentDescription="Password">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/edtPass"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="#FFFFFF"
+                android:textStyle="bold"
+                android:textSize="18sp"
+                android:inputType="textPassword"
+                android:background="@drawable/button_background_2"
+                android:padding="8dp"
+                android:drawablePadding="8dp"
+                android:layout_marginBottom="16dp"
+                android:hint="Password" />
+        </com.google.android.material.textfield.TextInputLayout>
+
 
         <!-- Nút Login -->
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btnLogin"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
+            android:layout_width="200dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="20dp"
             android:background="@drawable/button_background_3"
-            android:paddingLeft="25dp"
-            android:paddingRight="25dp"
+            android:layout_gravity="center"
             android:text="Log in"
             android:textStyle="bold"
             tools:ignore="HardcodedText" />
-
-        <!-- Nút forgot password -->
-        <TextView
-            android:id="@+id/tvFPass"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/button_background_2"
-            android:textColor="@color/white"
-            android:paddingTop="5dp"
-            android:paddingBottom="6dp"
-            android:paddingHorizontal="12dp"
-            android:text="Log in without password"
-            android:textAllCaps="false"
-            android:textSize="13dp"
-            tools:ignore="HardcodedText" />
     </LinearLayout>
+    <!-- Nút forgot password -->
+    <TextView
+        android:id="@+id/tvFPass"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_marginTop="750dp"
+        android:background="@drawable/button_background_1"
+        android:textColor="@color/white"
+        android:paddingTop="5dp"
+        android:paddingBottom="6dp"
+        android:layout_marginLeft="125dp"
+        android:paddingHorizontal="12dp"
+        android:text="Log in without password"
+        android:textAllCaps="false"
+        android:textSize="13dp"
+        tools:ignore="HardcodedText" />
 </RelativeLayout>
