--- a/app/src/main/res/layout/fragment_tab_view_playlist2.xml
+++ b/app/src/main/res/layout/fragment_tab_view_playlist2.xml
@@ -20,7 +20,7 @@
                 android:id="@+id/btn_sap_xep"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Sắp xếp"
+                android:text="Arrange"
                 android:textSize="16dp"
                 android:backgroundTint="@color/black"
                 android:layout_gravity="start"/>
