--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,9 @@
     <color name="lay">#93B1A6</color>
     <color name="white">#EDEDED</color>
     <color name="your_color_primary">#5C8374</color>
+    <color name="background_intro_1">#FF0000</color>
+    <color name="background_intro_2">#00FF00</color>
+    <color name="background_intro_3">#0000FF</color>
+
+
 </resources>
