--- a/app/src/main/res/layout/tracks_item.xml
+++ b/app/src/main/res/layout/tracks_item.xml
@@ -21,13 +21,13 @@
     </androidx.cardview.widget.CardView>
 
     <TextView
+        android:gravity="center"
         android:id="@+id/song_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:text="Song Title"
-        android:layout_marginLeft="50dp"
-        android:textSize="20dp"
+        android:textSize="18dp"
         android:textColor="#ffffff"
         android:textAppearance="?attr/textAppearanceListItem" />
 
@@ -39,5 +39,5 @@
         android:gravity="center"
         android:textAppearance="?attr/textAppearanceListItem"
         android:textColor="#A9FFFFFF"
-        android:textSize="15dp" />
+        android:textSize="13dp" />
 </LinearLayout>
